Resolves: tdf#146285 the "edit" button should be insensitive

for this case

Change-Id: Ib60577d10bd4a91ea01c5aa6fcf3d50b38fbe24d